--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -1,9 +1,90 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+
 /*Some necessary adjustments*/
-h1, body, html, main {
+h1,
+body,
+html,
+main {
   margin: 0;
 }
+
 /*Import the font and set the default size*/
 html {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px
+}
+
+body {
+  font-size: 1.8rem;
+  color: #333;
+  font-weight: lighter;
+}
+
+.head-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#title-img {
+  width: 100%;
+  height: 60vmax;
+  object-fit: cover;
+}
+
+.info-img {
+  display: block;
+  margin: 42px auto;
+  width: 50%;
+  height: auto;
+}
+
+.title-heading {
+  position: absolute;
+  color: #FFF;
+  font-size: 5rem;
+  font-weight: normal;
+}
+
+main {
+  margin: 10vh 12% 180px;
+}
+
+.subheading {
+  margin: 21px 0;
+  font-size: 2.2rem;
+  font-weight: normal;
+
+}
+
+.section {
+  margin-top: 50px;
+}
+
+.separator {
+  margin: 21px 0px;
+  height: 0.09rem;
+  background: #666;
+}
+
+.lists {
+  margin: 48px 0px;
+  line-height: 2.5rem;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+ul li::marker {
+  content: "- ";
+}
+
+ol li {
+  list-style-position: inside;
+  counter-increment: li;
+}
+
+ol li::marker {
+  content: counter(li) ")"" ";
 }
