--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
-body {
+h1,
+body,
+html,
+main {
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+}
+
+html {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px
+}
+
+body {
   font-size: 2rem;
+  font-weight: lighter;
 }
 
 .head-container {
@@ -38,7 +49,7 @@ main {
 
 .subheading {
   font-size: 2.2rem;
-  font-weight: bold;
+  font-weight: normal;
   color: #333;
 }
 
